adicionado as classes iniciais

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
   </head>
   <body class="no-js">
     <header class="header">
-      <a href="index.html">INFUSION</a>
+      <a href="index.html" class="logo-text">Infusion</a>
 
-      <button style="display: none">Menu</button>
+      <button style="display: none" class="header__btnMenu">Menu</button>
 
-      <nav>
+      <nav class="header__nav">
         <ul>
           <li><a href="#">design folio</a></li>
           <li><a href="#">services</a></li>
