--- a/index.html
+++ b/index.html
@@ -47,10 +47,12 @@
       </nav>
     </header>
 
-    <section>
-      <h1>CUTTING EDGE WP BUSINESS THEME</h1>
-      <p>Gutful of bottlo no dramas he's got a massive hooroo.</p>
-      <a href="#">Buy it now</a>
+    <section class="hero">
+      <h1 class="hero__title">cutting edge WP business theme</h1>
+      <p class="hero__text">
+        Gutful of bottlo no dramas he's got a massive hooroo.
+      </p>
+      <a href="#" class="hero__btn"> Buy it now</a>
     </section>
 
     <section>
