finalizado o HTML e CSS

--- a/index.html
+++ b/index.html
@@ -54,111 +54,145 @@
       </p>
       <a href="#" class="hero__btn"> Buy it now</a>
     </section>
+    <div class="container">
+      <section class="people-cards">
+        <article class="people-cards__card">
+          <img
+            src="img/c01.jpg"
+            alt="Carousel Img"
+            class="people-cards__imagem"
+          />
 
-    <section>
-      <article>
-        <img src="img/c01.jpg" alt="Carousel Img" />
+          <div class="people-cards__avatar">
+            <img src="img/teamsprite_01.png" alt="Carousel Img" />
+          </div>
+          <div class="people-cards__content">
+            <h2 class="people-cards__title">
+              Lorem ipsum dolor sit amet consectetur
+            </h2>
+            <p class="people-cards__text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris
+              mattis suscipit est, ut imperdiet tortor. Proin sed molestie
+              massa.
+            </p>
+          </div>
+        </article>
 
-        <div>
-          <img src="img/teamsprite_01.png" alt="Carousel Img" />
-        </div>
-        <div>
-          <h2>Lorem ipsum dolor sit amet consectetur</h2>
+        <article class="people-cards__card">
+          <img
+            src="img/c02.jpg"
+            alt="Carousel Img"
+            class="people-cards__imagem"
+          />
+
+          <div class="people-cards__avatar">
+            <img src="img/teamsprite_02.png" alt="Carousel Img" />
+          </div>
+          <div class="people-cards__content">
+            <h2 class="people-cards__title">
+              Lorem ipsum dolor sit amet consectetur
+            </h2>
+            <p class="people-cards__text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris
+              mattis suscipit est, ut imperdiet tortor. Proin sed molestie
+              massa.
+            </p>
+          </div>
+        </article>
+
+        <article class="people-cards__card">
+          <img
+            src="img/c03.jpg"
+            alt="Carousel Img"
+            class="people-cards__imagem"
+          />
+
+          <div class="people-cards__avatar">
+            <img src="img/teamsprite_03.png" alt="Carousel Img" />
+          </div>
+          <div class="people-cards__content">
+            <h2 class="people-cards__title">
+              Lorem ipsum dolor sit amet consectetur
+            </h2>
+            <p class="people-cards__text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris
+              mattis suscipit est, ut imperdiet tortor. Proin sed molestie
+              massa.
+            </p>
+          </div>
+        </article>
+
+        <article class="people-cards__card">
+          <img
+            src="img/c04.jpg"
+            alt="Carousel Img"
+            class="people-cards__imagem"
+          />
+
+          <div class="people-cards__avatar">
+            <img src="img/teamsprite_04.png" alt="Carousel Img" />
+          </div>
+          <div class="people-cards__content">
+            <h2 class="people-cards__title">
+              Lorem ipsum dolor sit amet consectetur
+            </h2>
+            <p class="people-cards__text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris
+              mattis suscipit est, ut imperdiet tortor. Proin sed molestie
+              massa.
+            </p>
+          </div>
+        </article>
+      </section>
+    </div>
+    <section class="content">
+      <div class="container">
+        <article>
+          <h3>
+            Lorem ipsum dolor sit amet consectetur adipiscing elit. Mauris
+            mattis suscipit est, ut imperdiet tortor. Proin sed.
+          </h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris
             mattis suscipit est, ut imperdiet tortor. Proin sed molestie massa.
+            Nullam condimentum mauris et rhoncus sagittis. Sed eu metus in diam
+            tincidunt egestas non at odio. Interdum et malesuada fames ac ante
+            ipsum primis in faucibus.
           </p>
-        </div>
-      </article>
+          <a href="#" class="button btn-primary">BUTTON</a>
+          <a href="#" class="button btn-secundary">BUTTON</a>
+        </article>
 
-      <article>
-        <img src="img/c02.jpg" alt="Carousel Img" />
-
-        <div>
-          <img src="img/teamsprite_02.png" alt="Carousel Img" />
-        </div>
-        <div>
-          <h2>Lorem ipsum dolor sit amet consectetur</h2>
+        <article>
+          <h3>
+            Lorem ipsum dolor sit amet consectetur adipiscing elit. Mauris
+            mattis suscipit est, ut imperdiet tortor. Proin sed.
+          </h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris
             mattis suscipit est, ut imperdiet tortor. Proin sed molestie massa.
+            Nullam condimentum mauris et rhoncus sagittis. Sed eu metus in diam
+            tincidunt egestas non at odio.
           </p>
-        </div>
-      </article>
-
-      <article>
-        <img src="img/c03.jpg" alt="Carousel Img" />
-
-        <div>
-          <img src="img/teamsprite_03.png" alt="Carousel Img" />
-        </div>
-        <div>
-          <h2>Lorem ipsum dolor sit amet consectetur</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris
-            mattis suscipit est, ut imperdiet tortor. Proin sed molestie massa.
+            Interdum et malesuada fames ac ante ipsum primis in faucibus. Aenean
+            vitae lectus erat. Duis consequat laoreet velit. Mauris convallis,
+            sapien sit amet scelerisque accumsan, felis urna aliquet nunc,
+            viverra mollis odio tellus a nisl. Nulla lobortis lectus non rutrum
+            viverra. Sed et molestie libero. Sed ut ultrices dui.
           </p>
-        </div>
-      </article>
-
-      <article>
-        <img src="img/c04.jpg" alt="Carousel Img" />
-
-        <div>
-          <img src="img/teamsprite_04.png" alt="Carousel Img" />
-        </div>
-        <div>
-          <h2>Lorem ipsum dolor sit amet consectetur</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris
-            mattis suscipit est, ut imperdiet tortor. Proin sed molestie massa.
-          </p>
-        </div>
-      </article>
+        </article>
+      </div>
     </section>
 
-    <section>
-      <article>
-        <h3>
-          Lorem ipsum dolor sit amet consectetur adipiscing elit. Mauris mattis
-          suscipit est, ut imperdiet tortor. Proin sed.
-        </h3>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis
-          suscipit est, ut imperdiet tortor. Proin sed molestie massa. Nullam
-          condimentum mauris et rhoncus sagittis. Sed eu metus in diam tincidunt
-          egestas non at odio. Interdum et malesuada fames ac ante ipsum primis
-          in faucibus.
-        </p>
-        <a href="#">BUTTON</a>
-        <a href="#">BUTTON</a>
-      </article>
+    <section class="last-articles">
+      <div class="last-articles__title">
+        <div class="container">
+          <h2>Latest Articles</h2>
+        </div>
+      </div>
 
-      <article>
-        <h3>
-          Lorem ipsum dolor sit amet consectetur adipiscing elit. Mauris mattis
-          suscipit est, ut imperdiet tortor. Proin sed.
-        </h3>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis
-          suscipit est, ut imperdiet tortor. Proin sed molestie massa. Nullam
-          condimentum mauris et rhoncus sagittis. Sed eu metus in diam tincidunt
-          egestas non at odio.
-        </p>
-        <p>
-          Interdum et malesuada fames ac ante ipsum primis in faucibus. Aenean
-          vitae lectus erat. Duis consequat laoreet velit. Mauris convallis,
-          sapien sit amet scelerisque accumsan, felis urna aliquet nunc, viverra
-          mollis odio tellus a nisl. Nulla lobortis lectus non rutrum viverra.
-          Sed et molestie libero. Sed ut ultrices dui.
-        </p>
-      </article>
-    </section>
-
-    <section>
-      <h2>Latest Articles</h2>
-
-      <div>
+      <div class="last-articles__thumbs">
         <a href="#"><img src="img/articles/01.jpg" alt="" /></a>
         <a href="#"><img src="img/articles/02.jpg" alt="" /></a>
         <a href="#"><img src="img/articles/03.jpg" alt="" /></a>
@@ -174,19 +208,23 @@
       </div>
     </section>
 
-    <div>
-      <div>
+    <div class="laptop-slider">
+      <div class="slideShow">
         <figure><img alt="" src="img/slider/slide-01.png" /></figure>
         <figure><img alt="" src="img/slider/slide-02.png" /></figure>
         <figure><img alt="" src="img/slider/slide-01.png" /></figure>
         <figure><img alt="" src="img/slider/slide-02.png" /></figure>
-        <span class="prev"><i class="fas fa-angle-left fa-4x"></i></span>
-        <span class="next"><i class="fas fa-angle-right fa-4x"></i></span>
+        <span class="prev" style="display: none"
+          ><i class="fas fa-angle-left fa-4x"></i
+        ></span>
+        <span class="next" style="display: none"
+          ><i class="fas fa-angle-right fa-4x"></i
+        ></span>
       </div>
     </div>
 
-    <section>
-      <div>
+    <section class="quote-container">
+      <div class="quote-slideShow">
         <figure>
           <h2>
             Nam mi enim, auctor non ultricies a, fringilla eu risus. Praesent
@@ -203,35 +241,41 @@
         </figure>
       </div>
 
-      <span class="prev"><i class="fas fa-angle-left fa-2x"></i></span>
-      <span class="next"><i class="fas fa-angle-right fa-2x"></i></span>
+      <span class="prev" style="display: none"
+        ><i class="fas fa-angle-left fa-2x"></i
+      ></span>
+      <span class="next" style="display: none"
+        ><i class="fas fa-angle-right fa-2x"></i
+      ></span>
     </section>
 
-    <footer>
-      <h2>Infusion</h2>
+    <footer class="footer">
+      <div class="container">
+        <h2>Infusion</h2>
 
-      <p>
-        Nam mi enim, auctor non ultricies a, fringilla eu risus. Praesent vitae
-        lorem et elit tincidunt accumsan suscipit eu libero. Maecenas diam est,
-        venenatis vitae dui in, vestibulum mollis arcu. Donec eu nibh tincidunt,
-        dapibus sem eu, aliquam dolor. Cum sociis natoque penatibus et magnis
-        dis parturient montes, nascetur ridiculus mus. Vestibulum consectetur
-        commodo eros, vitae laoreet lectus aliq
-      </p>
+        <p>
+          Nam mi enim, auctor non ultricies a, fringilla eu risus. Praesent
+          vitae lorem et elit tincidunt accumsan suscipit eu libero. Maecenas
+          diam est, venenatis vitae dui in, vestibulum mollis arcu. Donec eu
+          nibh tincidunt, dapibus sem eu, aliquam dolor. Cum sociis natoque
+          penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+          Vestibulum consectetur commodo eros, vitae laoreet lectus aliq
+        </p>
 
-      <p>
-        aliquam dolor. Cum sociis natoque penatibus et magnis dis parturient
-        montes, nascetur ridiculus mus. Vestibulum consectetur commodo eros,
-        vitae laoreet lectus aliq
-      </p>
+        <p>
+          aliquam dolor. Cum sociis natoque penatibus et magnis dis parturient
+          montes, nascetur ridiculus mus. Vestibulum consectetur commodo eros,
+          vitae laoreet lectus aliq
+        </p>
 
-      <ul>
-        <li><a href="#">List One</a></li>
-        <li><a href="#">Page Two</a></li>
-        <li><a href="#">Design</a></li>
-        <li><a href="#">Work</a></li>
-        <li><a href="#">Contact Me</a></li>
-      </ul>
+        <ul class="footer__links">
+          <li><a href="#">List One</a></li>
+          <li><a href="#">Page Two</a></li>
+          <li><a href="#">Design</a></li>
+          <li><a href="#">Work</a></li>
+          <li><a href="#">Contact Me</a></li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
