--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 
     <footer class="footer">
       <div class="container">
-        <h2>Infusion</h2>
+        <h2 class="footer__logo">Infusion</h2>
 
         <p>
           Nam mi enim, auctor non ultricies a, fringilla eu risus. Praesent
