adicionado os arquivos JS

--- a/index.html
+++ b/index.html
@@ -277,5 +277,8 @@
         </ul>
       </div>
     </footer>
+
+    <script src="./js/menu.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
