colocando para funcionar o carousel

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <a href="index.html" class="logo-text">Infusion</a>
 
       <button style="display: none" class="header__btnMenu">
-        <i class="fas fa-bars fa-2px"></i> <span class="sr-only">Menu</span>
+        <i class="fas fa-bars fa-2x"></i> <span class="sr-only">Menu</span>
       </button>
 
       <nav class="header__nav">
@@ -50,19 +50,22 @@
     </header>
 
     <section class="hero">
-      <h1 class="hero__title">cutting edge WP business theme</h1>
+      <h1 class="hero__title">
+        Cutting edge <abbr title="Wordpress">WP</abbr> business theme
+      </h1>
       <p class="hero__text">
         Gutful of bottlo no dramas he's got a massive hooroo.
       </p>
-      <a href="#" class="hero__btn"> Buy it now</a>
+      <a href="#" class="hero__btn">Buy it now</a>
     </section>
+
     <div class="container">
       <section class="people-cards">
         <article class="people-cards__card">
           <img
             src="img/c01.jpg"
             alt="Carousel Img"
-            class="people-cards__imagem"
+            class="people-cards__image"
           />
 
           <div class="people-cards__avatar">
@@ -84,7 +87,7 @@
           <img
             src="img/c02.jpg"
             alt="Carousel Img"
-            class="people-cards__imagem"
+            class="people-cards__image"
           />
 
           <div class="people-cards__avatar">
@@ -106,7 +109,7 @@
           <img
             src="img/c03.jpg"
             alt="Carousel Img"
-            class="people-cards__imagem"
+            class="people-cards__image"
           />
 
           <div class="people-cards__avatar">
@@ -128,7 +131,7 @@
           <img
             src="img/c04.jpg"
             alt="Carousel Img"
-            class="people-cards__imagem"
+            class="people-cards__image"
           />
 
           <div class="people-cards__avatar">
@@ -147,6 +150,7 @@
         </article>
       </section>
     </div>
+
     <section class="content">
       <div class="container">
         <article>
@@ -161,8 +165,8 @@
             tincidunt egestas non at odio. Interdum et malesuada fames ac ante
             ipsum primis in faucibus.
           </p>
-          <a href="#" class="button btn-primary">BUTTON</a>
-          <a href="#" class="button btn-secundary">BUTTON</a>
+          <a href="#" class="button button-primary">BUTTON</a>
+          <a href="#" class="button button-secundary">BUTTON</a>
         </article>
 
         <article>
@@ -211,7 +215,7 @@
     </section>
 
     <div class="laptop-slider">
-      <div class="slideShow">
+      <div class="slideshow">
         <figure><img alt="" src="img/slider/slide-01.png" /></figure>
         <figure><img alt="" src="img/slider/slide-02.png" /></figure>
         <figure><img alt="" src="img/slider/slide-01.png" /></figure>
@@ -226,7 +230,7 @@
     </div>
 
     <section class="quote-container">
-      <div class="quote-slideShow">
+      <div class="quote-slideshow">
         <figure>
           <h2>
             Nam mi enim, auctor non ultricies a, fringilla eu risus. Praesent
@@ -241,14 +245,13 @@
           </h2>
           <figcaption>Nam mi enim, auctor.</figcaption>
         </figure>
+        <span class="prev" style="display: none"
+          ><i class="fas fa-angle-left fa-2x"></i
+        ></span>
+        <span class="next" style="display: none"
+          ><i class="fas fa-angle-right fa-2x"></i
+        ></span>
       </div>
-
-      <span class="prev" style="display: none"
-        ><i class="fas fa-angle-left fa-2x"></i
-      ></span>
-      <span class="next" style="display: none"
-        ><i class="fas fa-angle-right fa-2x"></i
-      ></span>
     </section>
 
     <footer class="footer">
@@ -281,6 +284,8 @@
     </footer>
 
     <script src="./js/menu.js"></script>
+    <script src="./js/carrousel.js"></script>
+
     <script src="./js/main.js"></script>
   </body>
 </html>
